correct section visibility
remove br and search bar displayed as grid

--- a/styles/style.css
+++ b/styles/style.css
@@ -101,11 +101,17 @@ section {
 }
 
 .search-bar {
-    position: relative;
+    padding: 0.3rem;
+    display: grid;
+    grid-template-columns: 1fr auto;
+    gap: 0.5rem;
+    justify-items: center;
+    align-items: center;
     width: 100%;
-    height: 2.5rem;
-    /* margin-top: 1rem; */
     margin-bottom: 0.5rem;
+    border: 1px solid var(--border-color);
+    border-radius: var(--radius);
+    background-color: var(--search-bg);
     box-shadow: 0 -2px 10px 1px var(--blur-color);
 }
 
@@ -116,20 +122,21 @@ section {
     padding-left: 0.3rem;
     font-size: 0.9rem;
     color: var(--font-color);
-    border: 1px solid var(--border-color);
-    border-radius: var(--radius);
-    background-color: var(--search-bg);
+    background-color: transparent;
+    outline: none;
+    
 }
 
-.search-song {
-    position: absolute;
-    top: 0.4rem;
-    right: 1rem;
+.search-btn {
+    padding-right: 0.5rem;
     border: none;
     background: none;
-    font-size: 1.2rem;
     color: var(--font-color);
     opacity: 50%;
+}
+
+.search-btn i {
+    font-size: 1.2rem;
 }
 
 section a {
